# gh-release-watcher

./: Cargo.toml  README.md  example_config.toml
src/: main.rs
