[package]
name = "gh-release-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
directories = "4.0.1"
futures = "0.3.18"
reqwest = { version = "0.11.7", features = ["rustls-tls", "rustls-tls-native-roots", "json", "trust-dns"] }
serde = { version = "1.0.130", features = ["derive"] }
shlex = "1.1.0"
sled = "0.34.7"
tokio = { version = "1.14.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "fmt"] }

[features]
